<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="Box_one">Box one</string>
    <string name="box_two">box two</string>
    <string name="box_three">box three</string>
    <string name="box_four">box four</string>
    <string name="box_five">box five</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen</string>
    <string name="How_to_play">How to Play</string>
    <string name="Red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="green_button">Green</string>
</resources>